# New-Lang

./: .eslintrc.json  .gitignore  LICENSE  README.md  binding.gyp  calculate.cc  package-lock.json  package.json  webpack.config.js
src/lang/: CMakeLists.txt  Makefile  a.out  build.sh  calculate.cpp  error.h  error_handler.cpp  error_handler.h  lexer.cpp  lexer.h  main.cpp  output.txt  parser.cpp  parser.h  test.cpp  test.sh  test_code.txt  test_compiler.sh  test_lexer.sh  test_parser.sh  token.h
src/lang/include/: compiler.h  error_handler.h  executioner.h  expression.h  func_def_table.h  lexer.h  output_handler.h  parser.h  scope_tree.h  state_mgmt.h  token.h  value.h
src/lang/include/nodes/: expr_node.h  expr_nodes.h  inst_expr_nodes.h  inst_node.h  inst_nodes.h  nodes.h
src/lang/output/: test_invalid_number_dec.output  test_invalid_string.output  test_invalid_token.output  test_keywords.output  test_missing_main.output  test_prog1.output  test_prog2.output  test_prog3.output  test_term_symb.output  test_values.output
src/lang/src/: compiler.cpp  error_handler.cpp  executioner.cpp  expression.cpp  func_def_table.cpp  lexer.cpp  main.cpp  output_handler.cpp  parser.cpp  scope_tree.cpp  state_mgmt.cpp  test.cpp  value.cpp
src/lang/temp/: main.cpp
src/lang/test_cases/: test_keywords.txt.expected  test_prog1.txt  test_prog1.txt.expected  test_prog2.txt.expected  test_prog3.txt  test_prog3.txt.expected  test_space_delim.txt  test_space_delim.txt.expected  test_term_symb.txt  test_term_symb.txt.expected  test_values.txt  test_values.txt.expected
(+164 files in other folders)
